Fixed Meal plan vertical text alignment

--- a/homestyle.css
+++ b/homestyle.css
@@ -271,7 +271,7 @@ a:link {
     display: inline-block;
     padding: 15px 100px;
     transform: translateY(-120px);
-    
+    margin-top: 100px;
     
   }
   .meal_cube2{
